# nextline-graphql

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: docker-push.yml  docker-test.yml  image.yml  publish.yml  pypi.yml  release.yml  test-dev.yml  test.yml  type-check.yml  unit-test-dev.yml  unit-test-latest.yml  unit-test-min.yml  unit-test.yml
ci/latest/: requirements.txt
ci/minimum/: requirements.txt
nextlinegraphql/: __init__.py  _version.py  config.py  decorator.py  factory.py  graphql.py  logging.py  nl.py  plugin1.py  spec.py
nextlinegraphql/apluggy/: __init__.py
nextlinegraphql/bindables/: __init__.py  script.py
nextlinegraphql/config/: __init__.py  default.toml
nextlinegraphql/custom/: __init__.py  apluggy.py  decorator.py  pluggy.py  strawberry.py
nextlinegraphql/db/: .gitignore  __init__.py  alembic.ini  db.py  models.py  pagination.py  write.py
nextlinegraphql/db/alembic/: env.py
nextlinegraphql/db/alembic/versions/: 2022-03-14_14:00-de90b787e92f.py  2022-03-16_19:01-5a08750d6760.py
nextlinegraphql/example_script/: __init__.py  script.py  script2.py  script_threading.py
nextlinegraphql/hook/: __init__.py  spec.py
nextlinegraphql/nl/: __init__.py
nextlinegraphql/nl/example_script/: script.py
nextlinegraphql/plugins/continuous/: __init__.py  types.py
nextlinegraphql/plugins/continuous/schema/: mutation.py  query.py  subscription.py
nextlinegraphql/plugins/ctrl/: __init__.py  cache.py  test.py
nextlinegraphql/plugins/ctrl/example_script/: script2.py
nextlinegraphql/plugins/ctrl/graphql/: __init__.py
nextlinegraphql/plugins/ctrl/graphql/mutations/: Exec.gql  Interrupt.gql  Kill.gql  LoadExampleScript.gql  Reset.gql  RunAndContinue.gql  SendPdbCommand.gql  Terminate.gql
nextlinegraphql/plugins/ctrl/graphql/queries/: ContinuousEnabled.gql  Exception.gql  RunNo.gql  Source.gql  SourceLine.gql  State.gql
nextlinegraphql/plugins/ctrl/graphql/subscriptions/: ContinuousEnabled.gql  Counter.gql  Prompting.gql  RunNo.gql  State.gql  Stdout.gql  TraceIds.gql
nextlinegraphql/plugins/ctrl/schema/: mutation.py  query.py  subscription.py
nextlinegraphql/plugins/db/: __init__.py  alembic.ini  db.py  default.toml  migration.toml  plugin.py
nextlinegraphql/plugins/db/alembic/: env.py
nextlinegraphql/plugins/db/alembic/versions/: 2022-03-14_14:00-de90b787e92f.py  2022-03-16_19:01-5a08750d6760.py
nextlinegraphql/plugins/db/schema/: __init__.py  query.py  types.py
nextlinegraphql/plugins/db/schema/pagination/: db.py
nextlinegraphql/plugins/dev/: plugin.py
nextlinegraphql/plugins/dev/schema/: __init__.py  query.py
nextlinegraphql/plugins/graphql/: __init__.py  cors_mutation.py  default.toml  plugin.py
nextlinegraphql/plugins/graphql/graphql/: __init__.py
nextlinegraphql/plugins/graphql/schema/: query.py
nextlinegraphql/plugins/graphql/test/: __init__.py  funcs.py
nextlinegraphql/schema/: __init__.py  mutation.py  pagination.py  query.py  schema.graphql  stream.py  subscription.py  types.py
nextlinegraphql/schema/bindables/: __init__.py  script.py  script_asyncio.py  script_threading.py  scriptone.py  thread_safe_event.py
nextlinegraphql/schema/pagination/: __init__.py  connection.py  db.py  pagination.py
nextlinegraphql/schema2/: __init__.py
src/nextline_graphql/: __init__.py  factory.py
src/nextline_graphql/config/: default.toml
src/nextline_graphql/hook/: __init__.py
src/nextline_graphql/plugins/ctrl/: __init__.py  default.toml
src/nextline_graphql/plugins/ctrl/schema/: query.py  (+2 more)
src/nextline_graphql/plugins/dev/: plugin.py
src/nextline_graphql/plugins/graphql/: plugin.py
src/nextlinegraphql/: __about__.py  __init__.py
src/nextlinegraphql/hook/: spec.py
tests/: conftest.py  test_app.py  test_deprecated_import.py  test_import_all.py  test_queue_dist.py  test_version.py
tests/apluggy/: plugin1.py  plugin2.py  spec.py  test_call.py  test_contextmanager_varnames.py
tests/app/: test_app.py  test_cors.py  test_graphiql.py
tests/app/cors/: strategies.py  test_get.py  test_preflight.py  test_strategies.py
tests/custom/: test_decorator.py
tests/custom/pluggy/: plugin1.py  plugin2.py  spec.py  test_call.py
tests/db/: script.py  script_asyncio.py  script_threading.py  test_init.py  test_models.py  test_pagination.py
tests/db/alembic/: conftest.py  test_run_check.py
tests/db/models/: test_run.py
tests/db/pagination/: conftest.py  models.py  test_falsy_id.py  test_fixture.py  test_pagination.py  test_sort.py
tests/dynaconf/: config.toml  default.toml  test_merge.py
tests/dynaconf/merge/: config.toml  test_merge.py
tests/plugins/ctrl/: test_config.py  test_plugin.py
tests/plugins/ctrl/schema/: conftest.py  test_run.py
tests/plugins/db/: test_init.py  test_models.py
tests/plugins/db/alembic/: conftest.py  test_dynaconf.py
tests/plugins/db/pagination/: test_falsy_id.py  test_fixture.py
tests/plugins/dev/schema/: conftest.py
tests/plugins/graphql/: conftest.py  test_config.py  test_cors_mutation.py  test_graphiql.py  test_plugin.py
tests/plugins/graphql/schema/: conftest.py
tests/schema/: funcs.py  gql.py  test_agen_with_wait.py  test_counter.py  test_hello.py  test_run.py  test_schema.py
tests/schema/examples/: test_ariadne_graphql.py  test_async_asgi_testclient.py
tests/schema/graphql/: __init__.py
tests/schema/graphql/mutations/: Exec.gql  Reset.gql  SendPdbCommand.gql
tests/schema/graphql/queries/: GlobalState.gql  History.gql  HistoryAllRuns.gql  Runs.gql  Source.gql  State.gql
tests/schema/graphql/subscriptions/: GlobalState.gql  State.gql  Stdout.gql  TraceIds.gql  TraceState.gql
tests/schema/mutations/: test_reset.py
tests/schema/mutations/snapshots/: snap_test_reset.py
tests/schema/queries/: funcs.py  test_exception.py  test_history.py  test_pagenation.py  test_runs.py  test_source.py
tests/schema/queries/snapshots/: snap_test_source.py
tests/schema/snapshots/: snap_test_counter.py  snap_test_hello.py  snap_test_schema.py
(+39 files in other folders)
