[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "nextline-graphql"
dynamic = ["version"]
description = "Python framework for building plugin‑based HTTP API servers."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Tai Sakuma" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
keywords = ["nextline", "graphql", "plugin", "asgi", "api"]
dependencies = [
  "nextline>=0.7.15",
  "apluggy>=1.0",
  "dynaconf>=3.2",
  "starlette>=0.48",
  "strawberry-graphql>=0.283.2",
  "websockets>=12.0",
  "rich>=13.6",
  "async-asgi-testclient>=1.4",
]

[project.urls]
Homepage = "https://github.com/nextline-dev/nextline"

[dependency-groups]
dev = ["logging_tree", "uvicorn"]
tests = [
  "nextline-test-utils>=0.1.2",
  "pytest-asyncio>=1.3",
  "pytest-cov>=4.1",
  "pytest-timeout>=2.2",
  "pytest>=9.0",
  "hypothesis>=6.130",
  "syrupy>=5.0",
]
type-check = ["mypy"]
lint = ["ruff"]
print = ["icecream"]


[tool.hatch.version]
source = "regex_commit"
path = "src/nextlinegraphql/__about__.py"
check_dirty = false
tag_sign = false

[tool.hatch.build.targets.wheel]
packages = ["src/nextlinegraphql"]


[tool.pytest]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = "60"
addopts = ["--doctest-modules"]
# doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE",]
doctest_optionflags = ["ELLIPSIS"]
filterwarnings = ["ignore::hypothesis.errors.NonInteractiveExampleWarning"]
log_cli = false
log_cli_level = "INFO"

[tool.coverage.run]
branch = true
source = ["nextlinegraphql", "tests"]
concurrency = ["multiprocessing"]
omit = [
  "nextlinegraphql/plugins/ctrl/example_script/*",
  "venv/*",
  "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self\\.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  'if __name__ == "__main__":',
  "if TYPE_CHECKING:",
]
ignore_errors = true

[tool.ruff]
line-length = 88
extend-exclude = ["example_script"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
]
ignore = [
  "E203", # Whitespace before '{symbol}'
  "E265", # Block comment should start with #
  "E266", # Too many leading # before block comment
  "E501", # Line too long ({width} > {limit})
  "E741", # Ambiguous variable name '{name}'
]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.isort]
known-first-party = ["nextline", "nextline_test_utils"]

[tool.mypy]
plugins = "strawberry.ext.mypy_plugin"
exclude = '''(?x)(
    example_script/.*\.py$
)'''
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "dynaconf.*",
  "async_asgi_testclient.*",
  "snapshottest.*",
  "apluggy.*",
  "icecream.*",
]
ignore_missing_imports = true
